Fix split port of I2C device in INEX platform and improve DevicePortType and JST diagram to support connector with arbitrarily pin configuration